# ponchik

./: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  wget-log
.github/workflows/: ci.yml
app/: app.py  cli.py
app/api/enums/: client_type.py  daysOfWeek.py  days_of_week.py  direction_type.py  periodicity_type.py  subscription_status.py
app/api/models/: sqlalchemy_models.py
app/api/repository/: client_repository.py
app/api/routes/: auth_controller.py  bff_controller.py  client_controller.py  client_subscription_controller.py  subscription_controller.py  ticket_controller.py  trainer_controller.py
app/api/schemas/: CardTypes.py  ClientSubsriptions.py  DaysOfWeek.py  RemainingSessions.py  Schedule.py  Visits.py  auth.py  bff_model.py  client.py  client_subsription.py  remaining_session.py  schedule.py  scheduleDays.py  schedule_days.py  status.py  subscription.py  trainer.py  сard_types.py
app/api/services/: auth_service.py  client_service.py  client_subscription_service.py  crud_base.py  subscription_service.py  trainer_service.py
app/core/: config.py  wait_for_db.py
app/core/auth/: guard.py  jwt.py  jwt_utils.py
app/core/db/: db.py
app/scripts/: seed_client_types.py  seeds.py
app/utils/: cli.py
migrations/: env.py  script.py.mako
migrations/versions/: 2025-03-27_1_c56b8ef35cd3.py  2025-04-03_populate_client_types_table_1275bab53041.py  2025-04-03_y_4f4c3bd0de96.py  2025-04-08__c8f46502b725.py  2025-04-10__af40660be6a6.py
my-app/: Dockerfile  nginx.conf  package-lock.json  package.json
my-app/src/: App.module.scss  App.tsx  index.tsx
my-app/src/styles/: antd-overrides.scss  globals.scss  variables.scss
tests/: test_services.py
(+46 files in other folders)
