[project]
name = "ponchik"
version = "0.1.0"
description = ""
authors = [
    {name = "sqrtleet",email = "sqrtleet@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
