[tool.poetry]
name = "ponchik"
version = "0.1.0"
description = ""
authors = ["sqrtleet <sqrtleet@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
litestar = {extras = ["standard"], version = ">=2.15.2,<3.0.0"}
loguru = ">=0.7.3,<0.8.0"
sqlalchemy = ">=2.0.40,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
pydantic-settings = "^2.8.1"
pytest-asyncio = "^0.26.0"
passlib = "^1.7.4"
python-jose = "^3.4.0"
pydantic = {extras = ["email"], version = "^2.11.3"}
bcrypt = "^4.3.0"
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
advanced-alchemy = "^1.1.1"
pydantic = "^2.11.3"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"